Bug 122127 - Crash in: libmergedlo.so FORM EDIT using drag drop to move control from one dataform to another causes crash
Summary: Crash in: libmergedlo.so FORM EDIT using drag drop to move control from one d...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.2.0.0.beta1+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-12-15 17:34 UTC by Drew Jensen
Modified: 2018-12-19 10:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example file includes form with two top level dataform controls (31.99 KB, application/vnd.oasis.opendocument.database)
2018-12-15 17:34 UTC, Drew Jensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-12-15 17:34:40 UTC
Created attachment 147582 [details]
example file includes form with two top level dataform controls

This bug was filed from the crash reporting server and is br-61e384df-32eb-41c3-afa8-e2a2da8de614.
=========================================

Could not duplicate with 6.1.4. 
LO6.2Beta1 (from yesterday build) is consistent crash (100% of times) with firebird, also happens with hsqldb (but not quite 100% of the time). GTK2/3 made no difference, crash with either. 

To reproduce:

1 - open the attached odb with embedded FB database
2 - open any of the forms in edit mode (form design)
3 - open the dataform navigator windows 
4 - expand the two top level dataforms "Form" and "Form 1" (double click them)
5 - use the mouse to drag one of the label controls from "Form" to "Form 1"
crash

NOTE: after recovery the control will have been moved so the crash appears to happen after the file is updated for the change and when it is preparing to update the GUI.

Will update the bibisect files here and give that a try, today.
Comment 1 Robert Großkopf 2018-12-16 08:47:50 UTC
Could confirm the buggy behaviour with LO 6.2.0.0.beta1+, OpenSUSE 15, 64bit rpm Linux.

This version seems to be very buggy. When restoring the data no buttons appear. Have to switch with the mouse over the dialog, which will only position in the left upper corner of the screen. 
When opening the form for editing there are a lot of formatting-entries in menu bar, which will have nothing to do with form-design. Set the main-entries away from there original position.
When opening LO Main Window the default font seem to be something like Sans-Narrow.

Never seen such a peculiar LO-beta before.
Comment 2 Xisco Faulí 2018-12-17 11:17:44 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-06-04 15:01:43 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-06-11 08:26:14 +0200
commit eec9f6c8b928de38dd9e683f46bfab00f3243048 (patch)
tree 75838981f5c73c9799d139179f880b172981cb00
parent 32604a3da226a4e340d6e7844153e7d854fb7f2e (diff)
loplugin:useuniqueptr in FmEntryDataList

Bisected with: bibisect-linux64-6.2 

Adding Cc: to Noel Grandin
Comment 3 Noel Grandin 2018-12-19 07:27:38 UTC
Interesting. I have a fix in jenkins at

    https://gerrit.libreoffice.org/65394

but it really looks like this is a regression from

    commit 2629aac31142449312f77c5843ea209cc810acb4
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Oct 23 09:47:10 2018 +0200

    clang-tidy performance-unnecessary-copy-init in svx

I'm surprised the bisect was that far off
Comment 4 Commit Notification 2018-12-19 08:30:07 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7d8bce646d53d77405b45a50fc6e889ccd0c10e9%5E%21

tdf#122127 Crash in FORM EDIT using drag drop to move control in dataform

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-12-19 09:42:05 UTC
Hi Noel,
I've just checked just in case and it still points to eec9f6c8b928de38dd9e683f46bfab00f3243048, weird!
Anyway, I've just checked you patch locally and it fixes the issue.
Thanks for fixing this!!!
Comment 6 Commit Notification 2018-12-19 10:21:23 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/303043243d603c7fe70d6f23a8a6e11762fa28f4%5E%21

tdf#122127 Crash in FORM EDIT using drag drop to move control in dataform

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.