tdf#122127 Crash in FORM EDIT using drag drop to move control in dataform

regression from
    commit 2629aac31142449312f77c5843ea209cc810acb4
    Date:   Tue Oct 23 09:47:10 2018 +0200
    clang-tidy performance-unnecessary-copy-init in svx

Change-Id: I4210c328145d062d8b72f09dcff3280e11c6bc36
Reviewed-on: https://gerrit.libreoffice.org/65394
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 7d8bce646d53d77405b45a50fc6e889ccd0c10e9)